--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.html",
   "scripts": {
     "start": "parcel index.html",
-    "build": "parcel build index.html --public-url https://ovictori.github.io/react-parcel-eg1",
+    "build": "parcel build index.html --public-url https://ovictori.github.io/redo1",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Akoly Vongdala",
