--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-parcel-example-1",
   "version": "1.0.0",
   "description": "",
-  "main": "docs/index.html",
+  "main": "dist/index.html",
   "scripts": {
     "start": "parcel index.html",
     "build": "parcel build index.html --public-url https://ovictori.github.io/redo1",
