--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "regl-worldview": "^0.16.1",
+    "topojson-client": "^3.1.0",
     "vega": "^5.20.2",
     "vega-lite-api": "^5.0.0",
     "vega-tooltip": "^0.25.1"
