--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "MIT",
   "dependencies": {
     "d3-array": "^2.12.1",
+    "d3-axis-for-react": "^1.1.0",
     "d3-fetch": "^2.0.0",
     "d3-geo-projection": "^3.0.0",
     "d3-scale": "^3.3.0",
